--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular2": "^2.0.0-alpha.37",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -16,10 +18,13 @@
     "jade": "~1.11.0",
     "mongoose": "^4.1.9",
     "morgan": "~1.6.1",
+    "oauth2-server": "^2.4.1",
+    "passport": "^0.3.0",
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "angular2": "^2.0.0-alpha.37",
     "del": "^2.0.2",
     "es6-module-loader": "^0.17.8",
     "gulp-filter": "^3.0.1",
