--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.11.3",
     "gulp": "^3.9.0",
     "gulp-less": "^3.0.3",
     "gulp-watch": "^4.3.5",
     "jade": "~1.11.0",
     "mongoose": "^4.1.9",
     "morgan": "~1.6.1",
-    "oauth2-server": "^2.4.1",
+    "oauth2orize": "^1.0.1",
     "passport": "^0.3.0",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
