--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "angular2": "^2.0.0-alpha.37",
+    "angular2": "^2.0.0-alpha.40",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
@@ -23,7 +23,8 @@
     "passport": "^0.3.0",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "serve-static": "^1.10.0"
   },
   "devDependencies": {
     "del": "^2.0.2",
