--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "serve-static": "^1.10.0"
   },
   "devDependencies": {
+    "connect-livereload": "^0.5.3",
     "del": "^2.0.2",
     "es6-module-loader": "^0.17.8",
     "gulp-filter": "^3.0.1",
+    "gulp-shell": "^0.5.0",
     "gulp-tsc": "^1.1.1",
     "run-sequence": "^1.1.4",
     "systemjs": "^0.19.3",
+    "tiny-lr": "^0.2.1",
     "traceur": "0.0.91"
   }
 }
