--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "angular2": "^2.0.0-alpha.40",
+    "agenda": "^0.7.2",
+    "angular2": "^2.0.0-alpha.44",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
@@ -24,7 +25,9 @@
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
     "serve-favicon": "~2.3.0",
-    "serve-static": "^1.10.0"
+    "serve-static": "^1.10.0",
+    "systemjs": "^0.19.4",
+    "traceur": "0.0.92"
   },
   "devDependencies": {
     "connect-livereload": "^0.5.3",
@@ -34,8 +37,6 @@
     "gulp-shell": "^0.5.0",
     "gulp-tsc": "^1.1.1",
     "run-sequence": "^1.1.4",
-    "systemjs": "^0.19.3",
-    "tiny-lr": "^0.2.1",
-    "traceur": "0.0.91"
+    "tiny-lr": "^0.2.1"
   }
 }
